--- a/src/StyleDashboard.css
+++ b/src/StyleDashboard.css
@@ -1,61 +1,61 @@
 /* Googlefont Poppins CDN Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-@import url('https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+@import url("https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-.sidebar{
+.sidebar {
   position: fixed;
   height: 100%;
   width: 240px;
-  background: #0A3E0F;
+  background: #0a3e0f;
   transition: all 0.5s ease;
 }
-.sidebar.active{
+.sidebar.active {
   width: 60px;
 }
-.sidebar.active .logo-details img{
+.sidebar.active .logo-details img {
   margin: 0 16px !important;
 }
-.sidebar .logo-details{
+.sidebar .logo-details {
   height: 80px;
   display: flex;
   align-items: center;
   border-bottom: 2px solid #009533;
 }
-.sidebar .logo-details i{
+.sidebar .logo-details i {
   font-size: 28px;
   font-weight: 500;
   color: #fff;
   min-width: 60px;
-  text-align: center
+  text-align: center;
 }
-.sidebar .logo-details .logo_name{
+.sidebar .logo-details .logo_name {
   color: #fff;
   font-size: 24px;
   font-weight: 500;
 }
-.sidebar .nav-links{
+.sidebar .nav-links {
   margin-top: 10px;
   padding-left: 0;
 }
-.sidebar .nav-links li{
+.sidebar .nav-links li {
   position: relative;
   list-style: none;
   height: 50px;
   margin: 8px 15px;
   /* margin: 0 15px; */
 }
-.sidebar.active .nav-links li{
+.sidebar.active .nav-links li {
   margin: 0 !important;
 }
-.sidebar.active .nav-links li i{
+.sidebar.active .nav-links li i {
   border-radius: 0 !important;
 }
-.sidebar .nav-links li a{
+.sidebar .nav-links li a {
   height: 100%;
   width: 100%;
   display: flex;
@@ -64,39 +64,40 @@
   transition: all 0.4s ease;
   border-radius: 15px;
 }
-.sidebar.active .nav-links li a{
+.sidebar.active .nav-links li a {
   border-radius: 0px !important;
 }
-.sidebar .nav-links li a.active{
+.sidebar .nav-links li a.active {
   background: white;
 }
-.sidebar .nav-links li a:hover{
+.sidebar .nav-links li a:hover {
   background: white;
 }
-.sidebar .nav-links li i{
+.sidebar .nav-links li i {
   min-width: 60px;
   text-align: center;
   font-size: 18px;
   color: #fff;
 }
-.sidebar .nav-links li a:hover .links_name, .sidebar .nav-links li a:hover i{
-  color: #00C414;
+.sidebar .nav-links li a:hover .links_name,
+.sidebar .nav-links li a:hover i {
+  color: #00c414;
 }
-.sidebar .nav-links li .active i{
-  color: #00C414;
+.sidebar .nav-links li .active i {
+  color: #00c414;
   background-color: white !important;
 }
-.sidebar .nav-links li a .links_name{
+.sidebar .nav-links li a .links_name {
   color: #fff;
   font-size: 15px;
   font-weight: 400;
   white-space: nowrap;
 }
-.sidebar .nav-links li a.active .links_name{
-  color: #00C414;
+.sidebar .nav-links li a.active .links_name {
+  color: #00c414;
   background-color: white !important;
 }
-.home-section{
+.home-section {
   position: relative;
   background-color: #158649 !important;
   background: #f5f5f5;
@@ -105,12 +106,12 @@
   left: 240px;
   transition: all 0.5s ease;
 }
-.sidebar.active ~ .home-section{
+.sidebar.active ~ .home-section {
   width: calc(100% - 60px);
   left: 60px;
   background-color: #158649;
 }
-.home-section nav{
+.home-section nav {
   background-color: #158649 !important;
   display: flex;
   border-bottom: 2px solid #009533;
@@ -127,42 +128,42 @@
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   transition: all 0.5s ease;
 }
-.sidebar.active ~ .home-section nav{
+.sidebar.active ~ .home-section nav {
   left: 60px;
   width: calc(100% - 60px);
 }
-.home-section nav .sidebar-button{
+.home-section nav .sidebar-button {
   display: flex;
   align-items: center;
   font-size: 24px;
   font-weight: 500;
 }
-nav .sidebar-button i{
+nav .sidebar-button i {
   font-size: 35px;
   margin-right: 10px;
 }
-.home-section nav .search-box{
+.home-section nav .search-box {
   position: relative;
   height: 50px;
   max-width: 550px;
   width: 100%;
   margin: 0 20px;
 }
-nav .search-box input{
+nav .search-box input {
   height: 100%;
   width: 100%;
   outline: none;
-  background: #F5F6FA;
-  border: 2px solid #EFEEF1;
+  background: #f5f6fa;
+  border: 2px solid #efeef1;
   border-radius: 6px;
   font-size: 18px;
   padding: 0 15px;
 }
-nav .search-box .bx-search{
+nav .search-box .bx-search {
   position: absolute;
   height: 40px;
   width: 40px;
-  background: #2697FF;
+  background: #2697ff;
   right: 5px;
   top: 50%;
   transform: translateY(-50%);
@@ -173,38 +174,38 @@ nav .search-box .bx-search{
   font-size: 22px;
   transition: all 0.4 ease;
 }
-.home-section nav .profile-details{
+.home-section nav .profile-details {
   display: flex;
   align-items: center;
-  background: #F5F6FA;
-  border: 2px solid #EFEEF1;
+  background: #f5f6fa;
+  border: 2px solid #efeef1;
   border-radius: 6px;
   height: 50px;
   min-width: 190px;
   padding: 0 15px 0 2px;
 }
-nav .profile-details img{
+nav .profile-details img {
   height: 40px;
   width: 40px;
   border-radius: 6px;
   object-fit: cover;
 }
-nav .profile-details .admin_name{
+nav .profile-details .admin_name {
   font-size: 15px;
   font-weight: 500;
   color: #333;
   margin: 0 10px;
   white-space: nowrap;
 }
-nav .profile-details i{
+nav .profile-details i {
   font-size: 25px;
   color: #333;
 }
-.home-section .home-content{
+.home-section .home-content {
   position: relative;
   padding-top: 98px;
 }
-.home-content .overview-boxes{
+.home-content .overview-boxes {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -212,7 +213,7 @@ nav .profile-details i{
   padding: 0 20px;
   margin-bottom: 26px;
 }
-.overview-boxes .box{
+.overview-boxes .box {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -220,27 +221,27 @@ nav .profile-details i{
   background: #fff;
   padding: 15px 14px;
   border-radius: 12px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 28px;
 }
-.overview-boxes .box-topic{
+.overview-boxes .box-topic {
   font-size: 20px;
   font-weight: 500;
 }
-.home-content .box .number{
+.home-content .box .number {
   display: inline-block;
   font-size: 35px;
   margin-top: -6px;
   font-weight: 500;
 }
-.home-content .box .indicator{
+.home-content .box .indicator {
   display: flex;
   align-items: center;
 }
-.home-content .box .indicator i{
+.home-content .box .indicator i {
   height: 20px;
   width: 20px;
-  background: #8FDACB;
+  background: #8fdacb;
   line-height: 20px;
   text-align: center;
   border-radius: 50%;
@@ -248,13 +249,13 @@ nav .profile-details i{
   font-size: 20px;
   margin-right: 5px;
 }
-.box .indicator i.down{
+.box .indicator i.down {
   background: #e87d88;
 }
-.home-content .box .indicator .text{
+.home-content .box .indicator .text {
   font-size: 12px;
 }
-.home-content .box .cart{
+.home-content .box .cart {
   display: inline-block;
   font-size: 32px;
   height: 50px;
@@ -266,30 +267,30 @@ nav .profile-details i{
   border-radius: 12px;
   margin: -15px 0 0 6px;
 }
-.home-content .box .cart.two{
-   color: #2BD47D;
-   background: #C0F2D8;
- }
-.home-content .box .cart.three{
-   color: #ffc233;
-   background: #ffe8b3;
- }
-.home-content .box .cart.four{
-   color: #e05260;
-   background: #f7d4d7;
- }
-.home-content .total-order{
+.home-content .box .cart.two {
+  color: #2bd47d;
+  background: #c0f2d8;
+}
+.home-content .box .cart.three {
+  color: #ffc233;
+  background: #ffe8b3;
+}
+.home-content .box .cart.four {
+  color: #e05260;
+  background: #f7d4d7;
+}
+.home-content .total-order {
   font-size: 20px;
   font-weight: 500;
 }
-.home-content .sales-boxes{
+.home-content .sales-boxes {
   display: flex;
   justify-content: space-between;
   /* padding: 0 20px; */
 }
 
 /* left box */
-.home-content .sales-boxes .recent-sales{
+.home-content .sales-boxes .recent-sales {
   width: 65%;
   background: #fff;
   padding: 20px 30px;
@@ -297,38 +298,38 @@ nav .profile-details i{
   border-radius: 12px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
-.home-content .sales-boxes .sales-details{
+.home-content .sales-boxes .sales-details {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.sales-boxes .box .title{
+.sales-boxes .box .title {
   font-size: 24px;
   font-weight: 500;
   /* margin-bottom: 10px; */
 }
-.sales-boxes .sales-details li.topic{
+.sales-boxes .sales-details li.topic {
   font-size: 20px;
   font-weight: 500;
 }
-.sales-boxes .sales-details li{
+.sales-boxes .sales-details li {
   list-style: none;
   margin: 8px 0;
 }
-.sales-boxes .sales-details li a{
+.sales-boxes .sales-details li a {
   font-size: 18px;
   color: #333;
   font-size: 400;
   text-decoration: none;
 }
-.sales-boxes .box .button{
+.sales-boxes .box .button {
   width: 100%;
   display: flex;
   justify-content: flex-end;
 }
-.sales-boxes .box .button a{
+.sales-boxes .box .button a {
   color: #fff;
-  background: #0A2558;
+  background: #0a2558;
   padding: 4px 12px;
   font-size: 15px;
   font-weight: 400;
@@ -336,12 +337,12 @@ nav .profile-details i{
   text-decoration: none;
   transition: all 0.3s ease;
 }
-.sales-boxes .box .button a:hover{
-  background:  #0d3073;
+.sales-boxes .box .button a:hover {
+  background: #0d3073;
 }
 
 /* Right box */
-.home-content .sales-boxes .top-sales{
+.home-content .sales-boxes .top-sales {
   width: 35%;
   background: #fff;
   padding: 20px 30px;
@@ -349,13 +350,13 @@ nav .profile-details i{
   border-radius: 12px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
-.sales-boxes .top-sales li{
+.sales-boxes .top-sales li {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 10px 0;
 }
-.sales-boxes .top-sales li a img{
+.sales-boxes .top-sales li a img {
   height: 40px;
   width: 40px;
   object-fit: cover;
@@ -363,58 +364,58 @@ nav .profile-details i{
   margin-right: 10px;
   background: #333;
 }
-.sales-boxes .top-sales li a{
+.sales-boxes .top-sales li a {
   display: flex;
   align-items: center;
   text-decoration: none;
 }
 .sales-boxes .top-sales li .product,
-.price{
+.price {
   font-size: 17px;
   font-weight: 400;
   color: #333;
 }
 /* Responsive Media Query */
 @media (max-width: 1240px) {
-  .sidebar{
+  .sidebar {
     width: 60px;
   }
-  .sidebar.active{
+  .sidebar.active {
     width: 220px;
   }
-  .home-section{
+  .home-section {
     width: calc(100% - 60px);
     left: 60px;
   }
-  .sidebar.active ~ .home-section{
+  .sidebar.active ~ .home-section {
     left: 220px;
     width: calc(100% - 220px);
     overflow: hidden;
   }
-  .home-section nav{
+  .home-section nav {
     width: calc(100% - 60px);
     left: 60px;
   }
-  .sidebar.active ~ .home-section nav{
+  .sidebar.active ~ .home-section nav {
     width: calc(100% - 220px);
     left: 220px;
   }
 }
 @media (max-width: 1150px) {
-  .home-content .sales-boxes{
+  .home-content .sales-boxes {
     flex-direction: column;
   }
-  .home-content .sales-boxes .box{
+  .home-content .sales-boxes .box {
     width: 100%;
     overflow-x: scroll;
     margin-bottom: 30px;
   }
-  .home-content .sales-boxes .top-sales{
+  .home-content .sales-boxes .top-sales {
     margin: 0;
   }
 }
 @media (max-width: 1000px) {
-  .overview-boxes .box{
+  .overview-boxes .box {
     width: calc(100% / 2 - 15px);
     margin-bottom: 15px;
   }
@@ -422,82 +423,82 @@ nav .profile-details i{
 @media (max-width: 700px) {
   nav .sidebar-button .dashboard,
   nav .profile-details .admin_name,
-  nav .profile-details i{
+  nav .profile-details i {
     display: none;
   }
-  .home-section nav .profile-details{
+  .home-section nav .profile-details {
     height: 50px;
     min-width: 40px;
   }
-  .home-content .sales-boxes .sales-details{
+  .home-content .sales-boxes .sales-details {
     width: 560px;
   }
 }
 @media (max-width: 550px) {
-  .overview-boxes .box{
+  .overview-boxes .box {
     width: 100%;
     margin-bottom: 15px;
   }
-  .sidebar.active ~ .home-section nav .profile-details{
+  .sidebar.active ~ .home-section nav .profile-details {
     display: none;
   }
 }
 @media (max-width: 400px) {
-  .sidebar{
+  .sidebar {
     width: 0;
   }
-  .sidebar.active{
+  .sidebar.active {
     width: 60px;
   }
-  .home-section{
+  .home-section {
     width: 100%;
     left: 0;
   }
-  .sidebar.active ~ .home-section{
+  .sidebar.active ~ .home-section {
     left: 60px;
     width: calc(100% - 60px);
   }
-  .home-section nav{
+  .home-section nav {
     width: 100%;
     left: 0;
   }
-  .sidebar.active ~ .home-section nav{
+  .sidebar.active ~ .home-section nav {
     left: 60px;
     width: calc(100% - 60px);
   }
 }
 
-.success{
+.success {
   position: absolute;
   top: 27px;
   right: 9px;
-  background-color: rgb(106,168,126);
+  background-color: rgb(106, 168, 126);
   padding: 10px 30px;
   border-radius: 5px;
   border-left: 6px solid #ff4858;
   overflow: hidden;
   z-index: 100;
 }
-.check{
+.check {
   position: absolute;
   top: 50%;
   left: 20px;
   transform: translateY(-50%);
   font-size: 25px;
-  color: rgb(3,71,3);
+  color: rgb(3, 71, 3);
 }
-.msg{
+.msg {
   font-size: 25px;
-  color: rgb(32,90,32);
+  color: rgb(32, 90, 32);
   /* margin: 0 30px; */
   user-select: none;
 }
-.crose{
+.crose {
   padding: 20px 18px;
-  background-color: rgba(255,166,174,255);
+  background-color: rgba(255, 166, 174, 255);
   /* background-color: rgb(47,112,47); */
   font-size: 25px;
-  color: rgba(255,110,123,255);
+  color: rgba(255, 110, 123, 255);
   /* color: rgb(33,83,33); */
   position: absolute;
   top: 50%;
@@ -506,42 +507,42 @@ nav .profile-details i{
   cursor: pointer;
   transition: 0.3s;
 }
-.crose:hover{
+.crose:hover {
   /* background-color: rgb(51,100,51); */
   background-color: #e3969f;
 }
-.error{
+.error {
   animation: show_slide 1s ease forwards;
 }
-@keyframes show_slide{
-  0%{
+@keyframes show_slide {
+  0% {
     transform: translateX(100%);
   }
-  40%{
+  40% {
     transform: translateX(-10%);
   }
-  80%{
+  80% {
     transform: translateX(0%);
   }
-  100%{
+  100% {
     transform: translateX(-10px);
   }
 }
 
-.error.hide{
+.error.hide {
   animation: hide_slide 1s ease forwards;
 }
-@keyframes hide_slide{
-  0%{
+@keyframes hide_slide {
+  0% {
     transform: translateX(-10px);
   }
-  40%{
+  40% {
     transform: translateX(0%);
   }
-  80%{
+  80% {
     transform: translateX(-10%);
   }
-  100%{
+  100% {
     transform: translateX(100%);
   }
 }
@@ -571,7 +572,9 @@ nav .profile-details i{
   position: relative;
   transition: all 1s ease-in-out;
 }
-.popup img{ width: 100%;}
+.popup img {
+  width: 100%;
+}
 .popup h2 {
   margin-top: 0;
   color: #333;
@@ -587,53 +590,57 @@ nav .profile-details i{
   text-decoration: none;
   color: #333;
 }
-.popup .close:hover {color: #06D85F;}
+.popup .close:hover {
+  color: #06d85f;
+}
 
 /* .popup .content {
   max-height: 30%;
   overflow: auto;
 } */
 
-table{
-  background-color: #E3D1AF;
+table {
+  background-color: #e3d1af;
   width: -webkit-fill-available;
   border-radius: 10px;
 }
-tr{
+tr {
   border-top: 1px solid !important;
 }
-th,td{
-  background-color: #E3D1AF !important;
+th,
+td {
+  background-color: #e3d1af !important;
   width: -webkit-fill-available;
   /* border-radius: 10px; */
   padding: 16px;
   border: 1px solid transparent !important;
   border-right: 1px solid #ffe1a7 !important;
 }
-th:last-child,td:last-child {
+th:last-child,
+td:last-child {
   border-right: none !important;
 }
-.total{
-  color: #00C414;
+.total {
+  color: #00c414;
   font-size: 40px;
-  border-bottom: 2px solid #00C414;
+  border-bottom: 2px solid #00c414;
 }
 .tabname {
   padding: 13px;
   border-bottom: 1px solid;
   font-weight: 500;
 }
-.infor{
+.infor {
   padding-bottom: 10px;
   display: flex;
 }
-form{
+form {
   height: 531px;
 }
 td svg {
   margin: 0 9px;
 }
-.overlay .btn-primary:first-child{
+.overlay .btn-primary:first-child {
   position: absolute;
   left: 30px;
 }
@@ -644,14 +651,14 @@ td svg {
 thead tr:nth-child(1) {
   border: none !important;
 }
-button.detail{
+button.detail {
   border: none;
   background-color: transparent;
 }
-.put{
+.put {
   text-align: center;
 }
-.center{
+.center {
   text-align: center;
 }
 .function {
@@ -668,20 +675,20 @@ button.detail{
   background-color: transparent;
   color: white;
 }
-.function input{
+.function input {
   border: 1px solid #fff;
   background-color: transparent;
   color: #fff;
   border-radius: 24px;
   padding: 7px;
 }
-.function input[type=text]:focus{
+.function input[type="text"]:focus {
   outline: none;
 }
-.function input::placeholder{
+.function input::placeholder {
   color: white;
 }
-.btn-primary a{
+.btn-primary a {
   color: white;
   text-decoration: none;
 }
@@ -690,19 +697,19 @@ button.detail{
   left: 0px;
   margin-top: 40px;
 } */
-.create{
+.create {
   padding: 7px;
-  background-color: #00C414 !important;
+  background-color: #00c414 !important;
   border-radius: 15px;
   margin-right: 0 !important;
 }
-.create a{
+.create a {
   color: white !important;
   text-decoration: none;
 }
-.content form{
+.content form {
   overflow: auto;
 }
-.ck.ck-editor{
+.ck.ck-editor {
   margin-bottom: 1rem !important;
 }
