--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css");
 @import url("//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css");
 @import url("//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css");
 .App {
@@ -40,18 +40,17 @@
   }
 }
 
-body:has(.justify-content-center){
+body:has(.justify-content-center) {
   /* background-image: url("https://i.ibb.co/X8fkXYm/badminton-green-seamless-pattern-vector-3318565.jpg"); */
   background-image: url("https://img.freepik.com/free-vector/green-gradient-background-gradient-3d-design_343694-3667.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  overflow: hidden;
 }
-.forgot{
+.forgot {
   color: black;
   text-decoration: none;
 }
-.or{
+.or {
   text-align: center;
   margin: 17px;
   font-size: 20px;
@@ -66,7 +65,7 @@ body:has(.justify-content-center){
 /* button[type="button"]:hover{
   opacity: 1 !important;
 } */
-button[type="button"] span{
+button[type="button"] span {
   color: black;
 }
 
@@ -78,16 +77,16 @@ button[type="button"] span{
     left: 0;
     right: 0;
 } */
-.login{
+.login {
   font-weight: bold !important;
   font-size: 32px !important;
 }
-.re{
+.re {
   font-weight: normal !important;
   font-size: 22px !important;
   width: max-content;
 }
-.error{
+.error {
   position: absolute;
   top: -160px;
   right: -610px;
@@ -98,7 +97,7 @@ button[type="button"] span{
   overflow: hidden;
   width: max-content;
 }
-.check{
+.check {
   position: absolute;
   top: 50%;
   left: 20px;
@@ -107,17 +106,17 @@ button[type="button"] span{
   color: rgb(255, 73, 89);
   /* color: rgb(3,71,3); */
 }
-.msg{
+.msg {
   font-size: 25px;
-  color: rgba(255,110,123,255);
+  color: rgba(255, 110, 123, 255);
   margin: 0 30px;
   user-select: none;
 }
-.crose{
+.crose {
   padding: 20px 18px;
-  background-color: rgba(255,166,174,255);
+  background-color: rgba(255, 166, 174, 255);
   font-size: 25px;
-  color: rgba(255,110,123,255);
+  color: rgba(255, 110, 123, 255);
   position: absolute;
   top: 50%;
   right: 0;
@@ -125,46 +124,46 @@ button[type="button"] span{
   cursor: pointer;
   transition: 0.3s;
 }
-.crose:hover{
+.crose:hover {
   /* background-color: rgb(51,100,51); */
   background-color: #e3969f;
 }
-.error{
+.error {
   animation: show_slide 1s ease forwards;
 }
-@keyframes show_slide{
-  0%{
+@keyframes show_slide {
+  0% {
     transform: translateX(100%);
   }
-  40%{
+  40% {
     transform: translateX(-10%);
   }
-  80%{
+  80% {
     transform: translateX(0%);
   }
-  100%{
+  100% {
     transform: translateX(-10px);
   }
 }
 
-.error.hide{
+.error.hide {
   animation: hide_slide 1s ease forwards;
 }
-@keyframes hide_slide{
-  0%{
+@keyframes hide_slide {
+  0% {
     transform: translateX(-10px);
   }
-  40%{
+  40% {
     transform: translateX(0%);
   }
-  80%{
+  80% {
     transform: translateX(-10%);
   }
-  100%{
+  100% {
     transform: translateX(100%);
   }
 }
-.loginN{
+.loginN {
   width: max-content;
   margin: 0 auto;
   border-radius: 26px;
@@ -176,19 +175,19 @@ button[type="button"] span{
 /* .w-100 input{
   width: 341.84px;
 } */
-.text-green-500{
+.text-green-500 {
   color: green;
 }
-.text-red-500{
+.text-red-500 {
   color: red;
 }
-.text-base.font-medium{
+.text-base.font-medium {
   margin: 0;
 }
-.gap-4 .text-red-500{
+.gap-4 .text-red-500 {
   color: red !important;
 }
-.gap-4 .text-green-500{
+.gap-4 .text-green-500 {
   color: green !important;
 }
 .gap-4 input {
@@ -201,9 +200,9 @@ button[type="button"] span{
   margin-top: -22px;
   margin-bottom: 10px;
 }
-#signInDiv iframe{
+#signInDiv iframe {
   width: -webkit-fill-available !important;
 }
-#container.haAclf{
+#container.haAclf {
   width: -webkit-fill-available !important;
 }
