--- a/src/StyleDashboardAdmin.css
+++ b/src/StyleDashboardAdmin.css
@@ -602,7 +602,7 @@ td:last-child {
   border-right: none !important;
 }
 .total {
-  color: #008395;
+  color: #008ec4;
   font-size: 40px;
   border-bottom: 2px solid #008395;
 }
