--- a/src/StyleHome.css
+++ b/src/StyleHome.css
@@ -354,11 +354,10 @@ body:has(.image-container) {
 .book-text {
   width: -webkit-fill-available;
   font-weight: 500;
+  line-height: 31px;
 }
 .book-image {
-  /* text-align: right;
-    width: fit-content; */
-  width: 360px;
+  width: 560px;
 }
 .book-box {
   justify-content: center;
@@ -426,4 +425,26 @@ body:has(.image-container) {
   width: 30px;
   border-radius: 30px;
   margin-left: 6px;
+}
+.book-slot a {
+  background-color: red;
+  color: white !important;
+  text-decoration: none !important;
+  padding: 5px;
+  margin: 16px;
+  border-radius: 11px;
+}
+.court-name {
+  margin: 38px 109px;
+  font-size: 35px;
+  font-weight: 600;
+}
+.court-con {
+  font-weight: 500;
+  font-size: 26px;
+}
+.full-infor {
+  background-color: #d9d9d9;
+  padding: 26px;
+  border-radius: 19px;
 }
