--- a/src/StyleHome.css
+++ b/src/StyleHome.css
@@ -150,6 +150,7 @@ body:has(.image-container) {
 }
 .check-input {
   width: 100%;
+  height: auto;
   margin: 50px auto;
   background-color: #d9d9d9;
   padding: 38px;
@@ -480,7 +481,28 @@ button.k-button.k-mb-4 {
   background-color: #ff6358;
   color: white;
   border: none;
+  float: left;
 }
 button.k-button.k-mb-4:hover {
   background-color: #ea5a51;
+}
+.form-search {
+  padding: 1rem 0.75rem;
+  height: calc(3.5rem + calc(var(--bs-border-width) * 2));
+  min-height: calc(3.5rem + calc(var(--bs-border-width) * 2));
+  line-height: 1.25;
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+input#searchTerm:focus {
+  outline: none;
 }
