add more text area comment

--- a/src/StyleHome.css
+++ b/src/StyleHome.css
@@ -486,3 +486,7 @@ input#searchTerm:focus {
 body:has(.boPay) {
   background-color: white !important;
 }
+.input-group-text {
+  background-color: transparent;
+  border: none;
+}
